<resources>
    <string name="app_name">Delivery Point</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="live_chat">Live Chat</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="offers">Offers</string>
    <string name="share_app">Share app</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Logout</string>
    <string name="cart">Cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_categories">All Categories</string>
    <string name="back">Back</string>
    <string name="type_here">Type here...</string>
    <string name="add_a_photos">Add a Photos</string>
    <string name="customer_support">Customer Support</string>
    <string name="submit">Submit</string>
    <string name="login">Login</string>
    <string name="password_reset">Password Reset</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email">Email</string>
    <string name="back_to_login">Back to Login</string>
    <string name="order_history">Order History</string>
    <string name="my_orders">My Orders</string>
    <string name="special_offers">Special Offers</string>
    <string name="upto_50_offers">Upto 50% offers 🎉</string>
    <string name="restaurants_around_you">Restaurants Around You</string>
    <string name="view_all">View All</string>
    <string name="newly_joined">Newly Joined</string>
    <string name="search">Search</string>
    <string name="delivery_to">Delivery to</string>
    <string name="select_location">Select Location</string>
    <string name="deliver_to">Deliver to</string>
    <string name="change">Change</string>
    <string name="change_address">Change Address</string>
    <string name="my_cart">My Cart</string>
    <string name="kwd">KWD</string>
    <string name="credit_points">Credit Points</string>
    <string name="hello">Hello,</string>
    <string name="hit_a_search_bar_to_create_an_order">Hit a search bar to create an order</string>
    <string name="add_a_new_address">Add a new address</string>
    <string name="search_with_the_restaurant">Search with the restaurant</string>
</resources>