<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginSignUp.Login">

    <RelativeLayout
        android:layout_marginTop="25dp"
        android:padding="18dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:id="@+id/backToHomePageOnTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginEnd="-6dp"
                android:src="@drawable/ic_arrow_back_blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="start"
                android:text="@string/login"
                android:textColor="@color/Blue"
                android:textSize="16sp" />

        </LinearLayout>


        <TextView
            android:text="@string/password_reset"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:id="@+id/title"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />



    </RelativeLayout>


    <RelativeLayout
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <TextView
            android:id="@+id/top"
            android:layout_alignParentTop="true"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/forgot_password"/>

        <TextView
            android:gravity="center"
            android:padding="20dp"
            android:id="@+id/content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Mel ea numquam efficiendi appellantur, eu vix \n reque inermis propriae, animal scaevola."/>










        <com.google.android.material.textfield.TextInputLayout
            android:layout_below="@+id/content"
            android:layout_width="match_parent"
            android:paddingHorizontal="30dp"
            android:id="@+id/emailAddressLayout"
            android:layout_height="wrap_content">
            <EditText
                android:textSize="15sp"
                android:paddingStart="0dp"
                android:gravity="start"
                android:id="@+id/emailAddress"
                tools:layout_marginBottom="12dp"
                android:background="@android:color/transparent"
                android:hint="@string/email"
                android:layout_width="match_parent"
                android:inputType="textEmailAddress"
                android:tag="Email Address"
                android:textColorHint="@color/line"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>






        <TextView
            android:textStyle="bold"
            android:foreground="?android:attr/selectableItemBackground"
            android:focusable="true"
            android:clickable="true"
            android:textSize="20sp"
            android:id="@+id/continueTo"
            android:textColor="@color/white"
            android:background="@drawable/button_background"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/emailAddressLayout"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:text="Continue"/>


        <TextView
            android:foreground="?android:attr/selectableItemBackground"
            android:focusable="true"
            android:clickable="true"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:background="@drawable/button_background_transparent"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/continueTo"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:text="@string/back_to_login"/>









    </RelativeLayout>








</LinearLayout>