<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <LinearLayout
        android:background="@drawable/main_gradient_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_marginTop="20dp"
            android:padding="30dp"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:id="@+id/imageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/nav_header_desc"
                app:srcCompat="@mipmap/ic_launcher_round" />

            <LinearLayout

                android:layout_marginStart="20dp"
                android:layout_toEndOf="@+id/imageView"
                android:layout_centerVertical="true"
                android:id="@+id/textLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:textSize="15sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/nav_header_vertical_spacing"
                    android:text="@string/hello"
                    android:textColor="@color/white" />

                <TextView
                    android:textSize="15sp"
                    android:id="@+id/userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    tools:text="Raghu" />

            </LinearLayout>




            <ImageView
                android:foreground="@drawable/flat_ripple_transparent"
                android:clickable="true"
                android:focusable="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_baseline_settings_24"
                android:id="@+id/settings"
                android:layout_width="24dp"
                app:tint="@color/white"
                android:layout_height="24dp"
                android:contentDescription="@string/nav_header_desc"/>


        </RelativeLayout>

    </LinearLayout>



    <RelativeLayout
         android:padding="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">

        <TextView

            android:id="@+id/creditPointsTitle"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:fontFamily="@font/sf_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/credit_points"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:layout_alignParentEnd="true"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:fontFamily="@font/sf_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="KWD 16.000"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/dcontainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </ScrollView>



</LinearLayout>