<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Theme.AppCompat.StatusBar_TransParent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_alignParentTop="true"
        android:id="@+id/titleWithBackBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="18dp">

            <LinearLayout
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:id="@+id/backToHomePageOnTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="-6dp"
                    android:src="@drawable/ic_arrow_back_blue" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="start"
                    android:text="@string/back"
                    android:textColor="@color/Blue"
                    android:textSize="16sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/resNameTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/customer_support"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>


    </androidx.cardview.widget.CardView>

    <ScrollView
        android:id="@+id/cusSupData"
        android:layout_below="@+id/titleWithBackBtn"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:padding="10dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_a_photos"/>

                <androidx.cardview.widget.CardView
                    android:id="@+id/addPhotos"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:focusable="true"
                    android:clickable="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    app:cardBackgroundColor="@color/line"
                    app:cardCornerRadius="3dp"
                    android:layout_width="50dp"
                    android:layout_height="50dp">

                    <ImageView
                        android:backgroundTint="@color/black"
                        android:layout_margin="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/ic_baseline_add_24"/>


                </androidx.cardview.widget.CardView>


            </LinearLayout>

            <ImageView
                android:id="@+id/reviewImageView"
                android:visibility="gone"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:layout_width="150dp"
                android:layout_height="150dp" />

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <EditText
                    android:padding="15dp"
                    android:gravity="start"
                    android:hint="@string/type_here"
                    android:background="@drawable/bg_tv_review"
                    android:layout_width="300dp"
                    android:layout_height="150dp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/submitAReview"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_marginTop="20dp"
                android:padding="15dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:background="@drawable/button_background"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submit"/>



            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:visibility="gone"
        android:layout_gravity="center"
        android:id="@+id/noDataFoundLayout"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:backgroundTint="@color/line"
            android:background="@drawable/ic_outline_wifi_off_24"
            android:layout_gravity="center"
            android:layout_width="150dp"
            android:layout_height="150dp"/>

        <TextView
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:textSize="30sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="No Internet Connection"/>

        <TextView
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Your internet connection is currently \n not available please check or try again."/>


        <TextView
            android:id="@+id/backToHomePageFromOrderHistory"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:textColor="@color/white"
            android:padding="15sp"
            android:background="@drawable/button_background"
            android:layout_marginTop="50dp"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:text="Try Again"/>


    </LinearLayout>





</RelativeLayout>